Successfully (at least apparently) revamp macros.tex into a cls file. Now to use it in the main file for all the individual courses.

--- a/fall/mynotes.cls
+++ b/fall/mynotes.cls
@@ -1,5 +1,8 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesClass{mynotes}[2019/09/25 Lecture notes format class]
+
+\LoadClass[reqno]{amsart}
+
 \RequirePackage[utf8]{inputenc}
 \RequirePackage[margin=1in]{geometry}
 \RequirePackage[usenames, dvipsnames]{xcolor}
