Notes for 215A, October 1

--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -12,4 +12,8 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Wednesday, September 25, 2019}
 	\input{2019/09/20190925.tex}
+	
+
+\section{Monday, September 30, 2019}
+    \input{2019/09/20190930.tex}
 \end{document}
