--- a/fall/215A/2019/09/20190925.tex
+++ b/fall/215A/2019/09/20190925.tex
@@ -137,7 +137,7 @@ It's possible to do linear algebra without an inner product. But we're physicist
         \item $\braket{v}{w}\in \CC$
         \item $\braket{v}{w}=\braket{w}{v}^*$
         \item $\braket{v}{\alpha_1 w_1 +\alpha_2 w_2} = \alpha\braket{v}{w_1} +\alpha_2 \braket{v}{w_2}$
-        \item $\braket{v}{v}\geq 0$ with $\braket{v}{v}=0\implies \ket{v}=0$.
+        \item $\braket{v}{v}\geq 0$ with $\braket{v}{v}=0\iff \ket{v}=0$.
     \end{itemize}
 \end{defn}
 \begin{defn}
@@ -153,7 +153,7 @@ It's possible to do linear algebra without an inner product. But we're physicist
     \end{equation}
 \end{ex}
 
-We have some properties of an inner product. The inner product must satisfy the \term{Schwarz inequality},
+We can derive some useful properties of an inner product. The inner product must satisfy the \term{Schwarz inequality},
 \begin{equation}
     |\braket{w}{v}|^2 \leq \braket{w}{w} \braket{v}{v}.
 \end{equation}
