--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -12,4 +12,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Wednesday, September 25, 2019}
 	\input{2019/09/20190925.tex}
+
+\section{Tuesday, October 1, 2019}
+    \input{2019/10/20191001.tex}
 \end{document}
