--- a/fall/extra_math.tex
+++ b/fall/extra_math.tex
@@ -78,6 +78,7 @@
 \newcommand{\g}{\gamma}
 \newcommand{\s}{\sigma}
 \newcommand{\z}{\zeta}
+\newcommand{\II}{\mathbb{I}}
 \newcommand{\RR}{\mathbb{R}}
 \newcommand{\NN}{\mathbb{N}}
 \newcommand{\QQ}{\mathbb{Q}}
