--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -3,6 +3,7 @@
 \begin{document}
 \title{Physics 215A: Quantum Mechanics}
 \author{Ian Lim\\ Last updated \today}
+\fancyhead[RE]{\small\slshape Physics 215A Lecture Notes}
 \maketitle
 {\small\noindent These notes were taken for Physics 215A, \emph{Quantum Mechanics}, as taught by Mukund Rangamani at the University of California, Davis in fall quarter 2019. I live-\TeX ed them using Overleaf, and as such there may be typos; please send questions, comments, complaints, and corrections to 
 \href{mailto:itlim@ucdavis.edu?subject=215A\%20Lecture\%20Notes}{\texttt{itlim@ucdavis.edu}}.\\
