--- a/fall/230B/230B-notes-ucd.tex
+++ b/fall/230B/230B-notes-ucd.tex
@@ -3,6 +3,7 @@
 \begin{document}
 \title{Physics 230B: Quantum Field Theory}
 \author{Ian Lim\\ Last updated \today}
+\fancyhead[RE]{\small\slshape Physics 230B Lecture Notes}
 \maketitle
 {\small\noindent These notes were taken for Physics 230B, \emph{Quantum Field Theory}, as taught by Markus Luty at the University of California, Davis in fall quarter 2019. I live-\TeX ed them using Overleaf, and as such there may be typos; please send questions, comments, complaints, and corrections to 
 \href{mailto:itlim@ucdavis.edu?subject=230B\%20Lecture\%20Notes}{\texttt{itlim@ucdavis.edu}}.\\
