Commit for October 2, Math Methods.

--- a/fall/204A/2019/09/20190930.tex
+++ b/fall/204A/2019/09/20190930.tex
@@ -189,7 +189,7 @@ so our first unit vector is not orthogonal to $x^2$. We can instead define
 \end{equation}
 which is now orthogonal to the first unit vector $1/\sqrt{2}$ and to the second unit vector $\sqrt{3/2}x$. We can normalize $\hat x^2$ and determine the third unit vector in this set, which is $\frac{3x^2}{2}-1$ (we think).
 
-Let us remark that the most general operators that can be diagonalized are normal operators, i.e. those satisfying
+Let us remark that the most general operators that can be diagonalized are \term{normal} operators, i.e. those satisfying
 \begin{equation}
     [A,A^\dagger]=0.
 \end{equation}
