--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -17,4 +17,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Monday, September 30, 2019}
     \input{2019/09/20190930.tex}
+\section{Wednesday, October 2, 2019}
+    \input{2019/10/20191002.tex}
 \end{document}
