--- a/fall/204A/2019/10/20191002.tex
+++ b/fall/204A/2019/10/20191002.tex
@@ -103,7 +103,7 @@ It's clear that we can restrict to the real case, in which case Hermitian matric
     \end{equation}
     The boundary term vanishes based on the boundary conditions, i.e. given that $f,g$ vanish at infinity. Taking the complex conjugate to get the adjoint, what is left is
     \begin{equation}
-        -\bkt{\int (\frac{d}{dx} f^*) g}^* = -\int g^* D f.
+        \bkt{\int (\frac{d}{dx} f^*) g}^* = -\int g^* D f.
     \end{equation}
     So $D$ is not Hermitian but $iD$ is (it adds a minus sign to fix the sign in the integration by parts).
     
