--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -16,4 +16,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Tuesday, October 1, 2019}
     \input{2019/10/20191001.tex}
+
+\section{Thursday, October 3, 2019}
+    \input{2019/10/20191003.tex}
 \end{document}
