--- a/fall/extra_math.tex
+++ b/fall/extra_math.tex
@@ -84,10 +84,12 @@
 \newcommand{\QQ}{\mathbb{Q}}
 \newcommand{\ZZ}{\mathbb{Z}}
 \newcommand{\CC}{\mathbb{C}}
+\newcommand{\cA}{\mathcal{A}}
 \newcommand{\cB}{\mathcal{B}}
 \newcommand{\cC}{\mathcal{C}}
 \newcommand{\cD}{\mathcal{D}}
 \newcommand{\cM}{\mathcal{M}}
+\newcommand{\cP}{\mathcal{P}}
 \newcommand{\f}{\frac}
 \newcommand{\p}{\partial}
 %\renewcommand{\P}[3][]{\f{\partial^{#1} #2}{\partial #3 ^{#1}}}
