PDFs updated! See last commit message(s) for details.

--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -19,4 +19,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2019/09/20190930.tex}
 \section{Wednesday, October 2, 2019}
     \input{2019/10/20191002.tex}
+    
+\section{Monday, October 7, 2019}
+	\input{2019/10/20191007.tex}
 \end{document}
