Initial commit, 215A for October 8. Discussion of postulates and canonical quantization.

--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -19,4 +19,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Thursday, October 3, 2019}
     \input{2019/10/20191003.tex}
+\section{Tuesday, October 7, 2019}
+    \input{2019/10/20191008.tex}
 \end{document}
