Updates from Overleaf

--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -22,4 +22,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     
 \section{Monday, October 7, 2019}
 	\input{2019/10/20191007.tex}
+	
+\section{Wednesday, October 9, 2019}
+    \input{2019/10/20191009.tex}
 \end{document}
