--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -21,4 +21,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2019/10/20191003.tex}
 \section{Tuesday, October 7, 2019}
     \input{2019/10/20191008.tex}
+    
+\section{Thursday, October 10, 2019}
+    \input{2019/10/20191010.tex}
 \end{document}
