Updates from Overleaf

--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -25,4 +25,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 	
 \section{Wednesday, October 9, 2019}
     \input{2019/10/20191009.tex}
+
+\section{Monday, October 14, 2019}
+    \input{2019/10/20191014.tex}
 \end{document}
