Initial commit for QM. Solving the harmonic oscillator with algebraic and analytic methods.

--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -24,4 +24,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     
 \section{Thursday, October 10, 2019}
     \input{2019/10/20191010.tex}
+    
+\section{Tuesday, October 15, 2019}
+    \input{2019/10/20191015.tex}
 \end{document}
