Updates from Overleaf

--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -28,4 +28,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Monday, October 14, 2019}
     \input{2019/10/20191014.tex}
+\section{Wednesday, October 16, 2019}
+    \input{2019/10/20191016.tex}
 \end{document}
