Updates from Overleaf

--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -27,4 +27,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     
 \section{Tuesday, October 15, 2019}
     \input{2019/10/20191015.tex}
+\section{Thursday, October 17, 2019}
+    \input{2019/10/20191017.tex}
 \end{document}
