--- a/fall/extra_math.tex
+++ b/fall/extra_math.tex
@@ -105,7 +105,7 @@
 \DeclarePairedDelimiter\bra{\langle}{\rvert}
 \DeclarePairedDelimiter\ket{\lvert}{\rangle}
 \DeclarePairedDelimiterX\braket[2]{\langle}{\rangle}{#1 \delimsize\vert #2}
-\newcommand{\kb}[2]{\left\lvert #1 \middle\rangle\!\middle\langle #2 \right\rvert}
+\newcommand{\ketbra}[2]{\left\lvert #1 \middle\rangle\!\middle\langle #2 \right\rvert}
 \newcommand{\dyad}[1]{\left\lvert{#1}\middle\rangle\!\middle\langle{#1}\right\rvert}%{\left| #1 \right>\left< #1 \right|}
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 \newcommand{\ul}[1]{\underline{#1}}
