--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -30,4 +30,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2019/10/20191014.tex}
 \section{Wednesday, October 16, 2019}
     \input{2019/10/20191016.tex}
+
+\section{Monday, October 21, 2019}
+    \input{2019/10/20191021.tex}
 \end{document}
