Updates from Overleaf

--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -33,4 +33,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Monday, October 21, 2019}
     \input{2019/10/20191021.tex}
+\section{Wednesday, October 23, 2019}
+    \input{2019/10/20191023.tex}
 \end{document}
