--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -29,4 +29,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2019/10/20191015.tex}
 \section{Thursday, October 17, 2019}
     \input{2019/10/20191017.tex}
+
+\section{Tuesday, October 22, 2019}
+    \input{2019/10/20191022.tex}
 \end{document}
