--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -32,4 +32,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Tuesday, October 22, 2019}
     \input{2019/10/20191022.tex}
+
+\section{Thursday, October 24, 2019}
+    \input{2019/10/20191024.tex}
 \end{document}
