Commits for math methods and quantum. Proof of Bloch's theorem. Discussion of regular singular points in the Bessel equation.

--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -35,4 +35,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Thursday, October 24, 2019}
     \input{2019/10/20191024.tex}
+
+\section{Tuesday, October 29, 2019}
+    \input{2019/10/20191029.tex}
 \end{document}
