--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -35,4 +35,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2019/10/20191021.tex}
 \section{Wednesday, October 23, 2019}
     \input{2019/10/20191023.tex}
+
+\section{Monday, October 28, 2019}
+    \input{2019/10/20191028.tex}
 \end{document}
